syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

package adminauthservice;

service AdminAuthServiceProto {
	rpc Login (AdminLoginRequest) returns (AdminLoginReply);
    rpc CreateUserRole (CreateUserRoleRequest) returns (CreateUserRoleReply);
    rpc UpdateUserRole (UpdateUserRoleRequest) returns (common.CommonReply);
    rpc AddActionsToRole (AddActionsToRoleRequest) returns (google.protobuf.Empty);
    rpc DeleteUserRole (DeleteUserRoleRequest) returns (common.CommonReply);
}

message AdminLoginRequest {
    string username = 1;
    string password = 2;
}

message AdminLoginReply {
    string Token = 1;
    google.protobuf.Timestamp Expiration = 2;
    string Username = 3;
    google.protobuf.StringValue RefreshToken = 4;
    string ErrorCode = 5;
}

message CreateUserRoleRequest {
    string name = 1;
    google.protobuf.StringValue customer_id = 2;
}

message CreateUserRoleReply {
    string id = 1;
    google.protobuf.StringValue message = 2;
}

message AddActionsToRoleRequest {
    string role_id = 1;
    repeated string actions = 2;
}

message UpdateUserRoleRequest {
    string id = 1;
    string name = 2;
    google.protobuf.StringValue customer_id = 3;
}

message DeleteUserRoleRequest {
    string id = 1;
}